--- a/settings.ini
+++ b/settings.ini
@@ -1,18 +1,18 @@
 [DEFAULT]
 # All sections below are required unless otherwise specified
 host = github
-lib_name = {lib_name}
+lib_name = hello_nbdev
 # For Enterprise Git add variable repo_name and company name
-# repo_name = analytics
+repo_name = analytics
 # company_name = nike
 
-user = {user}
-# description = A description of your project
-# keywords = some keywords
-author = {author}
-author_email = {author_email}
-# copyright = Put your copyright information here
-branch = {branch}
+user = dhawalshah48
+description = A tutorial for nbdev
+keywords = fast.ai nbdev tutorial
+author = Dhawal Shah
+author_email = dhawal.shah@avalara.com
+copyright = dhawal.shah
+branch = master
 version = 0.0.1
 min_python = 3.6
 audience = Developers
